--- a/WeatherGift/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/WeatherGift/Base.lproj/Main.storyboard
@@ -60,12 +60,70 @@
                                     <constraint firstAttribute="height" constant="225" id="y8P-zZ-goF"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sHL-zb-Dr5">
+                                <rect key="frame" x="16" y="253" width="343" height="370"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DayWeatherCell" rowHeight="80" id="anZ-Qd-bRe" customClass="DayWeatherCell" customModule="WeatherGift" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="anZ-Qd-bRe" id="5M2-gE-svQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="clear-day" translatesAutoresizingMaskIntoConstraints="NO" id="FnS-Rm-eJQ">
+                                                    <rect key="frame" x="8" y="5" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Monday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lay-zl-NcJ">
+                                                    <rect key="frame" x="86" y="4" width="214" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-45°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j28-MJ-iup">
+                                                    <rect key="frame" x="293" y="-9" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Clear skies throughout the day" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0F-Io-1Pg">
+                                                    <rect key="frame" x="86" y="22" width="242" height="63"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-80°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HCW-Nn-sbC">
+                                                    <rect key="frame" x="293" y="19" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dayCellIcon" destination="FnS-Rm-eJQ" id="Ye6-Hf-IK3"/>
+                                            <outlet property="dayCellMaxTemp" destination="j28-MJ-iup" id="Om0-Rr-FjD"/>
+                                            <outlet property="dayCellMinTemp" destination="HCW-Nn-sbC" id="ffj-ED-PEg"/>
+                                            <outlet property="dayCellSummary" destination="R0F-Io-1Pg" id="0VO-hm-CGB"/>
+                                            <outlet property="dayCellWeekday" destination="lay-zl-NcJ" id="md1-zM-giU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sHL-zb-Dr5" secondAttribute="trailing" constant="16" id="31S-wh-HTs"/>
                             <constraint firstItem="7vy-rJ-VdI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="G64-XE-w5V"/>
                             <constraint firstItem="7vy-rJ-VdI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="LE7-3Z-7hw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7vy-rJ-VdI" secondAttribute="trailing" constant="16" id="cS1-qG-MUG"/>
+                            <constraint firstItem="sHL-zb-Dr5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="peu-pv-I7E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sHL-zb-Dr5" secondAttribute="bottom" constant="44" id="sf6-jr-qI7"/>
+                            <constraint firstItem="sHL-zb-Dr5" firstAttribute="top" secondItem="7vy-rJ-VdI" secondAttribute="bottom" constant="224" id="wTN-CI-tmP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -74,6 +132,7 @@
                         <outlet property="dateLabel" destination="w4a-cN-OD1" id="NFY-6r-pGK"/>
                         <outlet property="locationLabel" destination="ObX-0S-gWV" id="23i-Iy-hPH"/>
                         <outlet property="summaryLabel" destination="Oov-Ue-N5H" id="VS0-Lh-qIM"/>
+                        <outlet property="tableView" destination="sHL-zb-Dr5" id="S9d-3H-M6r"/>
                         <outlet property="temperatureLabel" destination="GIN-H5-jSW" id="amC-2a-zQE"/>
                     </connections>
                 </viewController>
@@ -159,4 +218,7 @@
             <point key="canvasLocation" x="1746" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="clear-day" width="384" height="384"/>
+    </resources>
 </document>
